@@ -1,3 +1,8 @@
+Thu May 26 13:09:50 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Compiler_Features_10_Test.cpp:
+          Resolved coverity warnings. 
+
 Mon May 23 07:55:41 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * tests/QtReactor_Test.h:
